analyzer init / done

--- a/pom.xml
+++ b/pom.xml
@@ -79,5 +79,6 @@
 	<modules>
 		<module>sensors</module>
 		<module>containerProvider</module>
+		<module>analyzer</module>
 	</modules>
 </project>
