--- a/sensors/src/main/resources/application.properties
+++ b/sensors/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
 server.port=8081
+
+
+spring.cloud.config.enabled=false 
