--- a/reducer/pom.xml
+++ b/reducer/pom.xml
@@ -34,5 +34,9 @@
    			 <groupId>org.springframework.cloud</groupId>
    			 <artifactId>spring-cloud-stream-binder-kafka</artifactId>
 		</dependency>
+		<dependency>
+   			<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+		</dependency>
   </dependencies>
 </project>
