--- a/reducer/src/main/resources/application.properties
+++ b/reducer/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.cloud.config.fail-fast=true
 spring.cloud.config.retry.initial-interval=30000
 spring.cloud.config.retry.max-interval=60000
 
+
+spring.cloud.config.import-check.enabled=false
+spring.cloud.config.enabled=false
