--- a/populator/pom.xml
+++ b/populator/pom.xml
@@ -6,4 +6,24 @@
     <version>0.0.1</version>
   </parent>
   <artifactId>populator</artifactId>
+  
+  	<dependencies>
+	   
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-stream</artifactId>
+		</dependency>
+		
+		<dependency>
+   			 <groupId>org.springframework.cloud</groupId>
+   			 <artifactId>spring-cloud-stream-binder-kafka</artifactId>
+		</dependency>
+		
+  </dependencies>
+
 </project>
