order provider ready

--- a/orderProvider/src/main/resources/application.properties
+++ b/orderProvider/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-spring.application.name=sensorDataReducer
+spring.application.name=orderProvider
+
 spring.config.import=configserver:http://${CONFIG_SERVER_HOST:localhost}:8888
 spring.cloud.config.fail-fast=true
 spring.cloud.config.retry.initial-interval=30000
 spring.cloud.config.retry.max-interval=60000
 
 
+spring.data.mongodb.uri=mongodb+srv://Dima:Dima@warehouse.vgjbojc.mongodb.net/warehouse?retryWrites=true&w=majority&appName=warehouse
 
+server.port=8085
