adding OpenOrder / update properties for connection to configserver

--- a/analyzer/src/main/resources/application.properties
+++ b/analyzer/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=analyzer
 
-spring.data.mongodb.uri=mongodb+srv://Dima:Dima@warehouse.vgjbojc.mongodb.net/warehouse
-?retryWrites=true&w=majority&appName=warehouse
+#spring.config.import=configserver:http://${CONFIG_SERVER_HOST:localhost}:8888
+#spring.cloud.config.fail-fast=true
+#spring.cloud.config.retry.initial-interval=30000
+#spring.cloud.config.retry.max-interval=60000
 
 # Kafka Configuration
 spring.kafka.consumer.bootstrap-servers=localhost:9092
@@ -16,8 +18,6 @@ spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.Str
 
 
 server.port=8083
-spring.config.import=optional:configserver:
 
-spring.cloud.config.enabled=false
-spring.cloud.config.import-check.enabled=false
+
 
