--- a/sensors/src/main/resources/application.properties
+++ b/sensors/src/main/resources/application.properties
@@ -6,8 +6,11 @@ spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.Str
 
 server.port=8081
 
+spring.config.import=configserver:http://${CONFIG_SERVER_HOST:localhost}:8888
+spring.cloud.config.fail-fast=true
+spring.cloud.config.retry.initial-interval=30000
+spring.cloud.config.retry.max-interval=60000
 
-spring.cloud.config.enabled=false 
 
 app.enableConsumption=true
 app.enableAutofill=true
