--- a/autoFill/src/main/resources/application.properties
+++ b/autoFill/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=AutoFill
 
-spring.cloud.config.enabled=false
+spring.config.import=configserver:http://${CONFIG_SERVER_HOST:localhost}:8888
+spring.cloud.config.fail-fast=true
+spring.cloud.config.retry.initial-interval=30000
+spring.cloud.config.retry.max-interval=60000
 
 
 server.port=8084
