The code works completely autonomously)

--- a/autoFill/src/main/resources/application.properties
+++ b/autoFill/src/main/resources/application.properties
@@ -1,9 +1,19 @@
 spring.application.name=AutoFill
 
-spring.config.import=configserver:http://${CONFIG_SERVER_HOST:localhost}:8888
-spring.cloud.config.fail-fast=true
-spring.cloud.config.retry.initial-interval=30000
-spring.cloud.config.retry.max-interval=60000
+#spring.config.import=configserver:http://${CONFIG_SERVER_HOST:localhost}:8888
+#spring.cloud.config.fail-fast=true
+#spring.cloud.config.retry.initial-interval=30000
+#spring.cloud.config.retry.max-interval=60000
+spring.cloud.config.enabled=false
 
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=my-group
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+spring.kafka.producer.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 
 server.port=8084
